--- a/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/environment.yaml
+++ b/src/CurveAlign_CT-FIRE/Cellanalysis/toolevaluation/environment.yaml
@@ -7,7 +7,8 @@ dependencies:
     - python=3.8
     - pip
     - pip:
-        - tensorflow==2.10
+        - tensorflow==2.8
         - stardist
         - cellpose[gui]
         - notebook
+        - deepcell
