New environment.yml that hopefully works with Windows
Also made the code a lot more readable with different functions;
Tried a new visualization method using cones and k1, k2, k3, but it does look a bit off.

--- a/pycurvelets/environment.yml
+++ b/pycurvelets/environment.yml
@@ -359,3 +359,4 @@ dependencies:
       - partsegcore-compiled-backend==0.15.9
       - pylops==2.4.0
       - triangle==20230923
+prefix: /opt/anaconda3/envs/pycurvelets
